Fixed game icon margins and added Y overflow to battle log.

--- a/src/App.css
+++ b/src/App.css
@@ -133,8 +133,9 @@ body {
   height: 50px;
   gap: 1em;
   position: absolute;
-  bottom: 1em;
-  right: 1em;
+  bottom: 0;
+  right: 0;
+  margin: 1em;
 }
 
 .game-icon-btn {
@@ -361,17 +362,21 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
   height: 100%;
-  /* width: 100%; */
-  overflow: hidden;
+  width: 100%;
+  /* overflow: hidden; */
+  overflow-y: auto;
   position: relative;
 }
 
 .battle-log-gradient {
-  height: 100%;
+  height: 10%;
   width: 100%;
-  background: linear-gradient(to bottom, transparent 90%, lightgray 100%);
-  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom, transparent 0%, lightgray 90%);
+  position: fixed;
 }
 
 .battle-log-ul {
@@ -571,10 +576,11 @@ body {
   }
 
   .game-icons-container {
-    height: 25px;
+    height: 30px;
     gap: 0.5em;
-    bottom: 0.5em;
-    right: 0.5em;
+    bottom: 0em;
+    right: 0em;
+    margin: 0.5em;
   }
 
   .map-image {
@@ -669,12 +675,24 @@ body {
   }
 }
 
+@media ((orientation: landscape) and (height < 600px) and (width < 1100px)) {
+  .logbook {
+    position: fixed;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    height: 80%;
+    min-width: 85%;
+  }
+}
+
 @media ((orientation: landscape) and (width < 1000px)) {
   .game-icons-container {
-    height: 25px;
+    height: 30px;
     gap: 0.5em;
-    bottom: 0.5em;
-    right: 0.5em;
+    bottom: 0em;
+    right: 0em;
+    margin: 0.5em;
   }
 }
 
